packages/edxml-test-corpus/edxml_test_corpus-3.0.0.dev2-py3-none-any.whl/edxml_test_corpus/tests/valid/merge-multiple-files/duplicate-concept-multiple-ontologies/input-001.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--
Test if duplicate concept definitions in multiple ontology elements are accepted.
-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <ontology>
    <objecttypes/>
    <concepts>
      <concept name="a" version="1" description="a" display-name-singular="a" display-name-plural="a"/>
    </concepts>
    <eventtypes/>
    <sources/>
  </ontology>
  <ontology>
    <objecttypes/>
    <concepts>
      <concept name="a" version="1" description="a" display-name-singular="a" display-name-plural="a"/>
    </concepts>
    <eventtypes/>
    <sources/>
  </ontology>
</edxml>
