packages/edxml-test-corpus/edxml_test_corpus-3.0.0.dev2-py3-none-any.whl/edxml_test_corpus/tests/invalid/ontology/event-type-time-span-start-property-does-not-exist.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--
Testing event definition validation, verify
if event types that define a time span having
a start property that does not exist are rejected.
-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <ontology>
    <objecttypes>
      <objecttype name="a" description="a" display-name-singular="a" display-name-plural="a" version="1" data-type="datetime"/>
    </objecttypes>
    <concepts/>
    <eventtypes>
      <eventtype name="a" description="a" display-name-singular="a" display-name-plural="a" timespan-start="unknown"  timespan-end="b" summary="a" story="a" version="1">
        <properties>
          <property name="a" object-type="a" description="a" unique="false" optional="false" multivalued="false" merge="drop"/>
          <property name="b" object-type="a" description="b" unique="false" optional="false" multivalued="false" merge="drop"/>
        </properties>
        <relations/>
      </eventtype>
    </eventtypes>
    <sources/>
  </ontology>
</edxml>
